[tool.poetry]
name = "gbfs"
version = "0.1.0"
description = "new GBFS export engine"
authors = ["Lucas Obadia <lucas.obadia@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.3"
uwsgi = "^2.0.19"
sqlalchemy = "^1.3.18"
marshmallow = "^3.7.1"
flask = "^1.1.2"
blueprint = "^3.4.2"
flask_sqlalchemy = "^2.4.4"
pytz = "^2020.1"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
